<resources>
    <string name="app_name">Mango Weather</string>
    <string name="app_title">Live Weather by Mango</string>
    <string name="logo_placement">Logo Placement</string>
    <string name="your_city">Your City</string>
    <string name="other_cities">Other Cities</string>
    <string name="back_button">Back Button</string>
    <string name="search">Search</string>
    <string name="search_hint">Add cities comma separated</string>
    <string name="cities_less">You should add at least one city</string>
    <string name="cities_more">You can have max of 30 cities</string>
    <string name="temperature">Temperature</string>
    <string name="weather_desc">Weather Desc.</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="give_location_permissions">Please allow app location access from device settings</string>
    <string name="location_closed">Location is closed! kindly turn it ON</string>
    <string name="something_went_wrong">Something went wrong, please try again!</string>
    <string name="na">N/A</string>
    <string name="empty_screen">Empty Screen</string>
    <string name="locating_you">locating you…</string>
    <string name="widget_image_desc">Widget Image</string>
    <string name="widgetText">City</string>
    <string name="c">C°</string>
    <string name="f">F°</string>
    <string name="icon">Icon</string>
    <string name="clouds">Clouds</string>
    <string name="rain">Rain</string>
    <string name="humidity">Humidity</string>
    <string name="f_degree_photo">F degree photo</string>
    <string name="c_degree_photo" />
</resources>
