<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.activities.MainActivity">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:layout_alignParentTop="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="85dp"
        android:contentDescription="@string/logo_placement"
        android:scaleType="fitCenter"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/desc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/ad"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/app_title"
        android:textColor="@color/colorPrimary"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:layout_marginTop="50dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:paddingEnd="10dp"
        android:paddingRight="10dp">

        <Button
            android:id="@+id/your_city"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_primary_bg"
            android:maxLines="1"
            android:onClick="myCityWeather"
            android:text="@string/your_city"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

        <Button
            android:id="@+id/other_cities"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_primary_bg"
            android:maxLines="1"
            android:onClick="otherCitiesWeather"
            android:text="@string/other_cities"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textStyle="bold" />

    </LinearLayout>

    <eu.davidea.flipview.FlipView
        android:id="@+id/c_or_f"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_below="@+id/buttons"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:autoStart="false"
        android:background="@color/colorAccent"
        android:flipInterval="500"
        app:frontBackground="@color/colorAccent"
        app:frontImage="@drawable/cc2"
        app:rearBackground="@color/colorAccent"
        app:rearImage="@drawable/ff2" />

    <androidx.legacy.widget.Space
        android:id="@+id/ad"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true" />

</RelativeLayout>