<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipChildren="false"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:contentDescription="@string/back_button"
                android:onClick="goBack"
                android:scaleType="fitStart"
                app:srcCompat="@drawable/ic_back"
                app:tint="@color/colorPrimary" />

            <com.wajahatkarim3.easyflipview.EasyFlipView
                android:id="@+id/c_or_f"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_alignParentEnd="true"
                android:layout_centerHorizontal="true"
                android:layout_marginEnd="10dp"
                android:background="@color/colorAccent"
                android:clipToPadding="false"
                app:flipDuration="500"
                app:flipFrom="front"
                app:flipType="vertical">
                <!-- Back Layout Goes Here -->
                <include layout="@layout/f" />
                <!-- Front Layout Goes Here -->
                <include layout="@layout/c" />
            </com.wajahatkarim3.easyflipview.EasyFlipView>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/search_layout"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="20dp"
            android:padding="10dp">

            <EditText
                android:id="@+id/search_field"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/rounded_primary"
                android:hint="@string/search_hint"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="40dp"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/gray"
                android:textCursorDrawable="@drawable/cursor"
                android:textSize="14sp"
                tools:ignore="RtlSymmetry" />

            <ImageView
                android:id="@+id/search_icon"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="10dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/search"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_search"
                app:tint="@color/gray" />

        </RelativeLayout>

        <TextView
            android:id="@+id/error_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginLeft="20dp"
            android:gravity="center"
            android:text="@string/cities_less"
            android:textColor="@color/colorPrimary"
            android:textSize="12sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/search"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="15dp"
            android:background="@drawable/rounded_primary_bg"
            android:maxLines="1"
            android:onClick="searchCities"
            android:paddingStart="25dp"
            android:paddingLeft="25dp"
            android:paddingEnd="25dp"
            android:paddingRight="25dp"
            android:text="@string/search"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        <ImageView
            android:id="@+id/empty_screen_decoration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/empty_screen"
            android:padding="50dp"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/ic_empty_weather" />

        <include
            layout="@layout/weather_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/circular_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/colorPrimary"
        android:indeterminateTint="@color/colorPrimary"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:progressBackgroundTint="@color/colorPrimary"
        android:progressTint="@color/colorPrimary"
        android:visibility="gone" />

</RelativeLayout>