<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/back_button"
                android:onClick="goBack"
                android:scaleType="fitStart"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_back" />

            <ImageView
                android:layout_width="80dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:contentDescription="@string/back_button"
                android:onClick="reloadProcess"
                android:scaleType="fitStart"
                android:scaleX="-1"
                android:tint="@color/colorPrimary"
                app:srcCompat="@drawable/ic_refresh" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dp">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/ic_location_icon" />

            <TextView
                android:id="@+id/city_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginStart="20dp"
                android:layout_marginLeft="20dp"
                android:layout_marginEnd="20dp"
                android:hint="@string/locating_you"
                android:layout_marginRight="20dp"
                android:gravity="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />

        </LinearLayout>

        <ImageView
            android:id="@+id/empty_screen_decoration"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/empty_screen"
            android:padding="50dp"
            android:scaleType="fitCenter"
            android:visibility="gone"
            app:srcCompat="@drawable/ic_empty_weather" />

        <include
            android:id="@+id/weather_forecast"
            layout="@layout/weather_forecast"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/circular_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:backgroundTint="@color/colorPrimary"
        android:indeterminateTint="@color/colorPrimary"
        android:minWidth="50dp"
        android:minHeight="50dp"
        android:progressBackgroundTint="@color/colorPrimary"
        android:progressTint="@color/colorPrimary"
        android:visibility="visible"
        tools:ignore="UnusedAttribute" />

</RelativeLayout>